syntax = "proto3";

package user_service.v1;

option go_package = "internal/proto/v1";

import "google/protobuf/timestamp.proto";

message Account {
  string id = 1;
  string name = 2;
  string email = 3;
  google.protobuf.Timestamp created_at = 4;
}

message FindAccountByEmailRequest { string email = 1; }

message FindAccountByEmailResponse { Account account = 1; }

service UserService {
  rpc FindAccountByEmail(FindAccountByEmailRequest)
      returns (FindAccountByEmailResponse);
}
